add the move system

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "workspaces": [
     "packages/camera-system",
     "packages/client",
-    "packages/controls-system"
+    "packages/controls-system",
+    "packages/move-system"
   ],
   "scripts": {
     "build:client": "yarn build:client",
