--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@loopholelabs/scale": "^0.3.19",
     "@loopholelabs/scale-http-adapters": "^0.3.9",
+    "@pixi/react": "^7.1.0",
     "next": "^13.4.19",
+    "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.66.1"
