--- a/packages/move-system/package.json
+++ b/packages/move-system/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "move-system",
 	"version": "0.0.0-development",
+	"main": "src/index.js",
 	"private": true,
 	"dependencies": {
-		"@loopholelabs/scale-signature-http": "0.3.8",
-		"@loopholelabs/scale-signature": "0.2.11"
+		"@loopholelabs/scale-signature": "0.2.11",
+		"@loopholelabs/scale-signature-http": "0.3.8"
 	}
 }
