--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "generateSpritesheetAnimations": "node ./scripts/generateSpritesheetAnimations.mjs",
     "lint": "next lint",
     "start": "next start"
   },
