--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.66.1",
+    "sort-system": "workspace:*",
     "spawn-system": "workspace:*",
     "statery": "^0.6.3",
     "uuid": "^9.0.0"
