--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,13 +17,13 @@
     "@loopholelabs/scale-http-adapters": "^0.3.9",
     "@pixi/react": "^7.1.0",
     "ai-system": "workspace:*",
-    "bullet-system": "workspace:*",
     "camera-system": "workspace:*",
     "controls-system": "workspace:*",
     "move-system": "workspace:*",
     "next": "^13.4.19",
     "physics-system": "workspace:*",
     "pixi.js": "^7.2.4",
+    "projectile-system": "workspace:*",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
