--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "bullet-system",
+	"name": "projectile-system",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
