--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -5,6 +5,7 @@
 	"private": true,
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
-		"@loopholelabs/scale-signature-http": "0.3.8"
+		"@loopholelabs/scale-signature-http": "0.3.8",
+		"uuid": "^9.0.0"
 	}
 }
