--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "sort-system": "workspace:*",
     "spawn-system": "workspace:*",
     "statery": "^0.6.3",
+    "store": "workspace:*",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
