abstract projectile creation to entity-utilities

--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -6,6 +6,6 @@
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
 		"@loopholelabs/scale-signature-http": "0.3.8",
-		"uuid": "^9.0.0"
+		"entity-utilities": "workspace:*"
 	}
 }
