prefix package names to prevent collisions with packages from the registry

--- a/packages/camera-system/package.json
+++ b/packages/camera-system/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "camera-system",
+	"name": "@space-game/camera-system",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
