--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,23 +17,23 @@
     "@loopholelabs/scale": "^0.3.19",
     "@loopholelabs/scale-http-adapters": "^0.3.9",
     "@pixi/react": "^7.1.0",
-    "ai-system": "workspace:*",
-    "camera-system": "workspace:*",
-    "controls-system": "workspace:*",
-    "cull-system": "workspace:*",
-    "move-system": "workspace:*",
+    "@space-game/ai-system": "workspace:*",
+    "@space-game/camera-system": "workspace:*",
+    "@space-game/controls-system": "workspace:*",
+    "@space-game/cull-system": "workspace:*",
+    "@space-game/move-system": "workspace:*",
+    "@space-game/physics-system": "workspace:*",
+    "@space-game/projectile-system": "workspace:*",
+    "@space-game/sort-system": "workspace:*",
+    "@space-game/spawn-system": "workspace:*",
+    "@space-game/store": "workspace:*",
     "next": "^13.4.19",
-    "physics-system": "workspace:*",
     "pixi.js": "^7.2.4",
-    "projectile-system": "workspace:*",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.66.1",
-    "sort-system": "workspace:*",
-    "spawn-system": "workspace:*",
     "statery": "^0.6.3",
-    "store": "workspace:*",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
