--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "utilities",
+	"name": "@space-game/utilities",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true
