--- a/packages/ai-system/package.json
+++ b/packages/ai-system/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ai-system",
+	"name": "@space-game/ai-system",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
