--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "projectile-system",
+	"name": "@space-game/projectile-system",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
 		"@loopholelabs/scale-signature-http": "0.3.8",
-		"entity-utilities": "workspace:*"
+		"@space-game/entity-utilities": "workspace:*"
 	}
 }
