--- a/packages/static-data/package.json
+++ b/packages/static-data/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "static-data",
+	"name": "@space-game/static-data",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
 	"dependencies": {
-		"store": "workspace:*"
+		"@space-game/store": "workspace:*"
 	}
 }
