--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "store",
+	"name": "@space-game/store",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
 	"private": true,
 	"dependencies": {
-		"entity-utilities": "workspace:*",
-		"statery": "^0.7.1",
-		"static-data": "workspace:*"
+		"@space-game/entity-utilities": "workspace:*",
+		"@space-game/static-data": "workspace:*",
+		"statery": "^0.7.1"
 	}
 }
