add the initial spawn system

--- a/packages/spawn-system/package.json
+++ b/packages/spawn-system/package.json
@@ -5,6 +5,8 @@
 	"private": true,
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
-		"@loopholelabs/scale-signature-http": "0.3.8"
+		"@loopholelabs/scale-signature-http": "0.3.8",
+		"@space-game/entity-utilities": "workspace:*",
+		"@space-game/store": "workspace:*"
 	}
 }
