--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -2,5 +2,6 @@
 	"name": "@space-game/utilities",
 	"version": "0.0.0-development",
 	"main": "src/index.js",
-	"private": true
+	"private": true,
+	"type": "module"
 }
