--- a/packages/controls-system/package.json
+++ b/packages/controls-system/package.json
@@ -4,11 +4,13 @@
 	"main": "src/index.js",
 	"private": true,
 	"type": "module",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"generate-types": "tsc --project tsconfig.json"
 	},
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
-		"@loopholelabs/scale-signature-http": "0.3.8"
+		"@loopholelabs/scale-signature-http": "0.3.8",
+		"@space-game/store": "workspace:*"
 	}
 }
