--- a/packages/move-system/package.json
+++ b/packages/move-system/package.json
@@ -4,6 +4,7 @@
 	"main": "src/index.js",
 	"private": true,
 	"type": "module",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"generate-types": "tsc --project tsconfig.json"
 	},
@@ -11,6 +12,7 @@
 		"@loopholelabs/scale-signature": "0.2.11",
 		"@loopholelabs/scale-signature-http": "0.3.8",
 		"@space-game/static-data": "workspace:*",
+		"@space-game/store": "workspace:*",
 		"@space-game/utilities": "workspace:*"
 	}
 }
