--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -4,12 +4,14 @@
 	"main": "src/index.js",
 	"private": true,
 	"type": "module",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"generate-types": "tsc --project tsconfig.json"
 	},
 	"dependencies": {
 		"@loopholelabs/scale-signature": "0.2.11",
 		"@loopholelabs/scale-signature-http": "0.3.8",
-		"@space-game/entity-utilities": "workspace:*"
+		"@space-game/entity-utilities": "workspace:*",
+		"@space-game/store": "workspace:*"
 	}
 }
