--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -4,6 +4,7 @@
 	"main": "src/index.js",
 	"private": true,
 	"type": "module",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"generate-types": "tsc --project tsconfig.json"
 	},
