fix type generation

--- a/packages/entity-utilities/tsconfig.json
+++ b/packages/entity-utilities/tsconfig.json
@@ -13,6 +13,9 @@
 		"skipLibCheck": true,
     "target": "esnext"
 	},
+	"include": [
+		"src/index.js"
+	],
 	"exclude": [
 		"**/*.ts",
 		".github",
