--- a/packages/static-data/tsconfig.json
+++ b/packages/static-data/tsconfig.json
@@ -13,8 +13,12 @@
 		"skipLibCheck": true,
     "target": "esnext"
 	},
+	"include": [
+		"./src/index.js"
+	],
 	"exclude": [
-		"**/*.ts",
+		"**/*.d.ts",
+		"**/*.d.ts.map",
 		".github",
 		".yarn",
 		"node_modules"
