abstract weapon definitions

--- a/packages/projectile-system/package.json
+++ b/packages/projectile-system/package.json
@@ -12,6 +12,7 @@
 		"@loopholelabs/scale-signature": "0.2.11",
 		"@loopholelabs/scale-signature-http": "0.3.8",
 		"@space-game/entity-utilities": "workspace:*",
+		"@space-game/static-data": "workspace:*",
 		"@space-game/store": "workspace:*"
 	}
 }
