fix client tsconfig

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,7 +14,7 @@
       "esnext"
     ],
     "module": "nodenext",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
